Add material variants
Notable content changes:
* Stone is now called rock, with a variant of stone, granite, andesite, diorite, blackstone, and deepslate. More variants may come in a future commit
* Wood now has variants for all 8 vanilla planks
* Slimewood now has variants for the 3 tinkers wood variants

Notable API changes:
* Material definition no longer includes color, that is now in the colors.json file to make it easier to color variants
* Many places in code now use MaterialId or MaterialVariantId instead of IMaterial, means we are only fetching material instances as needed
* Material localization is handled by a new helper, MaterialTooltipCache instead of being part of IMaterial
* Almost any recipe taking or producing a material now uses material variants
* Tools use MaterialVariant instead of IMaterial, which handles variant IDs and lazy loads materials