@@ -6,17 +6,17 @@ import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.RecipeSerializer;
 import net.minecraft.world.level.Level;
-import slimeknights.tconstruct.library.materials.definition.IMaterial;
+import slimeknights.tconstruct.library.materials.definition.MaterialVariant;
 import slimeknights.tconstruct.library.recipe.tinkerstation.ITinkerStationContainer;
 import slimeknights.tconstruct.library.recipe.tinkerstation.ITinkerStationRecipe;
 import slimeknights.tconstruct.library.tools.definition.PartRequirement;
 import slimeknights.tconstruct.library.tools.helper.ToolBuildHandler;
 import slimeknights.tconstruct.library.tools.item.IModifiable;
+import slimeknights.tconstruct.library.tools.nbt.MaterialNBT;
 import slimeknights.tconstruct.library.tools.part.IMaterialItem;
 import slimeknights.tconstruct.tables.TinkerTables;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /**
@@ -64,11 +64,10 @@ public class ToolBuildingRecipe implements ITinkerStationRecipe {
   @Override
   public ItemStack assemble(ITinkerStationContainer inv) {
     // first n slots contain parts
-    List<IMaterial> materials = IntStream.range(0, output.getToolDefinition().getData().getParts().size())
-                                         .mapToObj(inv::getInput)
-                                         .map(IMaterialItem::getMaterialFromStack)
-                                         .collect(Collectors.toList());
-    return ToolBuildHandler.buildItemFromMaterials(this.output, materials);
+    List<MaterialVariant> materials = IntStream.range(0, output.getToolDefinition().getData().getParts().size())
+                                               .mapToObj(i -> MaterialVariant.of(IMaterialItem.getMaterialFromStack(inv.getInput(i))))
+                                               .toList();
+    return ToolBuildHandler.buildItemFromMaterials(this.output, new MaterialNBT(materials));
   }
 
   /** @deprecated Use {@link #assemble(ITinkerStationContainer)} */
